--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 
     <!-- External -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800|Raleway:400,800&display=swap" rel="stylesheet">
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="css/layout.css" />
@@ -17,6 +17,15 @@
     <title>{{title}}</title>
   </head>
   <body>
+    <nav>
+      <div class="nav__logo">Timmy Global Health | Purdue</div>
+      <div class="nav__items">
+        <div class="nav__item">About Us</div>
+        <div class="nav__item">Meet The Team</div>
+        <div class="nav__item">Get Involved</div>
+        <div class="nav__item">Timmytimes</div>
+      </div>
+    </nav>
     {{{body}}}
   </body>
 </html>
