--- a/views/css/global.css
+++ b/views/css/global.css
@@ -5,3 +5,52 @@ html {
 h1 {
   font-family: 'Raleway', sans-serif;
 }
+
+/* NAV */
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  color: #FFFFFF;
+  padding: 16px 0;
+}
+.nav__logo {
+  font-size: 18px;
+  margin: 0 16px;
+}
+.nav__items {
+  display: flex;
+  text-transform: uppercase;
+  font-weight: bold;
+  align-items: center;
+  font-size: 14px;
+  font-family: 'Raleway', sans-serif;
+}
+.nav__item {
+  padding: 0 8px;
+  margin: 0 8px;
+}
+
+/* HOME */
+.home__header {
+  background: url('../img/group.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 500px;
+  position: relative;
+}
+.home__header::after {
+  content: '';
+  width: 100%;
+  height: 500px;
+  background: rgba(0,0,0,0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
