--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,12 +18,12 @@
   </head>
   <body>
     <nav>
-      <div class="nav__logo">Timmy Global Health | Purdue</div>
+      <a href="/"><div class="nav__logo">Timmy Global Health | Purdue</div></a>
       <div class="nav__items">
-        <div class="nav__item">About Us</div>
-        <div class="nav__item">Meet The Team</div>
-        <div class="nav__item">Get Involved</div>
-        <div class="nav__item">Timmytimes</div>
+        <a href="/about"><div class="nav__item">About Us</div></a>
+        <a href="/team"><div class="nav__item">Meet The Team</div></a>
+        <a href="/join"><div class="nav__item">Get Involved</div></a>
+        <a href="/timmytimes"><div class="nav__item">Timmytimes</div></a>
       </div>
     </nav>
     {{{body}}}
