--- a/views/css/global.css
+++ b/views/css/global.css
@@ -16,11 +16,13 @@ nav {
   left: 0;
   z-index: 2;
   color: #FFFFFF;
-  padding: 16px 0;
+  height: 90px;
+  align-items: center;
 }
 .nav__logo {
   font-size: 18px;
   margin: 0 16px;
+  color: #FFFFFF;
 }
 .nav__items {
   display: flex;
@@ -33,6 +35,7 @@ nav {
 .nav__item {
   padding: 0 8px;
   margin: 0 8px;
+  color: #FFFFFF;
 }
 
 /* HOME */
@@ -53,4 +56,11 @@ nav {
   top: 0;
   left: 0;
   z-index: 1;
+}
+
+/* PAGES */
+.page__header {
+  width: 100%;
+  background: #1B2339;
+  height: 90px;
 }
