Header content and page content stylings

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,11 @@
 <header class="home__header">
+  <div class="home__header_content_wrapper">
+    <div class="home__header_content">
+      <h1>A Global Mission</h1>
+      <h2>Delivering the promise of healthy futures.</h2>
+      <a href="/join"><div class="home__header_cta">Join Us</div></a>
+    </div>
+  </div>
 </header>
 
 home
