--- a/views/timmytimes.handlebars
+++ b/views/timmytimes.handlebars
@@ -1,3 +1,5 @@
-<header class="home__header">
+<header class="page__header">
 </header>
-<h1>Timmy Times</h1>
+<div class="page__content">
+  <h1>Timmy Times</h1>
+</div>
