--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,3 +1,5 @@
-<header class="home__header">
+<header class="page__header">
 </header>
-<h1>About Us</h1>
+<div class="page__content">
+  <h1>About us</h1>
+</div>
