--- a/views/css/global.css
+++ b/views/css/global.css
@@ -46,6 +46,8 @@ nav {
   width: 100%;
   height: 500px;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 .home__header::after {
   content: '';
@@ -55,7 +57,24 @@ nav {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  /* z-index: 1; */
+}
+.home__header_content_wrapper {
+  margin: auto;
+}
+.home__header_content {
+  color: #FFFFFF;
+  position: relative;
+  z-index: 2;
+  text-align: center;
+}
+.home__header_cta {
+  background: #5F99E7;
+  padding: 12px 18px;
+  display: inline-block;
+  border-radius: 4px;
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 /* PAGES */
@@ -63,4 +82,9 @@ nav {
   width: 100%;
   background: #1B2339;
   height: 90px;
+}
+.page__content {
+  max-width: 1000px;
+  margin: auto;
+  padding: 0 32px;
 }
