--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -1,3 +1,5 @@
-<header class="home__header">
+<header class="page__header">
 </header>
-<h1>Get Involved!</h1>
+<div class="page__content">
+  <h1>Get Involved</h1>
+</div>
