Adds about sections

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,40 @@
 <header class="page__header">
 </header>
-<div class="page__content">
+<div class="page__title">
   <h1>About us</h1>
+</div>
+<div class="page__content">
+  <section>
+    <h2>Fundraising</h2>
+    <p>
+      Lorem ipsum dolor sit amit.
+      <ul>
+        <li>description of fundraising</li>
+        <li>Feature Ashley</li>
+      </ul>
+    </p>
+  </section>
+  <section>
+    <h2>Advocacy</h2>
+    <p>
+      Lorem ipsum dolor sit amit.
+      <ul>
+        <li>description of Advocacy</li>
+        <li>Feature Clare</li>
+      </ul>
+    </p>
+  </section>
+  <section>
+    <h2>Service</h2>
+    <p>
+      Lorem ipsum dolor sit amit.
+      <ul>
+        <li>
+          description of Service
+          <li>Feature service trips, photos</li>
+        </li>
+        <li>Feature Ananya</li>
+      </ul>
+    </p>
+  </section>
 </div>
