--- a/views/css/global.css
+++ b/views/css/global.css
@@ -1,9 +1,12 @@
-html {
+body {
   font-family: 'Montserrat', sans-serif;
 }
 
-h1 {
+h1,h2,h3,h4 {
   font-family: 'Raleway', sans-serif;
+}
+p {
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* NAV */
@@ -23,6 +26,7 @@ nav {
   font-size: 18px;
   margin: 0 16px;
   color: #FFFFFF;
+  font-weight: bold;
 }
 .nav__items {
   display: flex;
@@ -36,6 +40,7 @@ nav {
   padding: 0 8px;
   margin: 0 8px;
   color: #FFFFFF;
+  letter-spacing: .5px;
 }
 
 /* HOME */
