--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -1,5 +1,40 @@
 <header class="page__header">
 </header>
+<div class="page__title">
+  <h1>Our Team</h1>
+</div>
 <div class="page__content">
-  <h1>Team</h1>
+  <section class="team__person">
+    <div class="team__person_picture">
+      <img src="https://via.placeholder.com/200">
+    </div>
+    <div class="team__person_about">
+      <div class="team__person_title">
+        <span class="team__person_name">Name Namerson</span> - President
+      </div>
+      <p class="team__person_description">name, year, major, hometown, personal statement, and short description of what role entails (if the director has a committee, mention committee names here)</p>
+    </div>
+  </section>
+  <section class="team__person">
+    <div class="team__person_picture">
+      <img src="https://via.placeholder.com/200">
+    </div>
+    <div class="team__person_about">
+      <div class="team__person_title">
+        <span class="team__person_name">Name Namerson</span> - President
+      </div>
+      <p class="team__person_description">name, year, major, hometown, personal statement, and short description of what role entails (if the director has a committee, mention committee names here)</p>
+    </div>
+  </section>
+  <section class="team__person">
+    <div class="team__person_picture">
+      <img src="https://via.placeholder.com/200">
+    </div>
+    <div class="team__person_about">
+      <div class="team__person_title">
+        <span class="team__person_name">Name Namerson</span> - President
+      </div>
+      <p class="team__person_description">name, year, major, hometown, personal statement, and short description of what role entails (if the director has a committee, mention committee names here)</p>
+    </div>
+  </section>
 </div>
