--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -1,5 +1,25 @@
 <header class="page__header">
 </header>
-<div class="page__content">
+<div class="page__title">
   <h1>Get Involved</h1>
+</div>
+<div class="page__content">
+  <section>
+    <h2>Our Events</h2>
+    <div class="join__calendar">
+      <iframe src="https://calendar.google.com/calendar/embed?src=m2fr4r36o1ksr6prmr0kpejco0%40group.calendar.google.com&ctz=America%2FIndiana%2FIndianapolis" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+  </section>
+  <section class="join__contact">
+    <h2>Contact Us</h2>
+    <form action="https://formspree.io/email@domain.tld" method="POST">
+      <div class="join__contact_label">Your Name</div>
+      <input type="text" name="name" placeholder="John Appleseed">
+      <div class="join__contact_label">Your Email</div>
+      <input type="email" name="_replyto" placeholder="example@example.com">
+      <div class="join__contact_label">Your Message</div>
+      <textarea name="message" placeholder="I'd love to join!"></textarea>
+      <input type="submit" value="Send" class="join__contact_submit">
+    </form>
+  </section>
 </div>
