--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -26,15 +26,53 @@
   </section>
   <section>
     <h2>Service</h2>
+    <hr/>
+    <h3>Around Purdue</h3>
     <p>
-      Lorem ipsum dolor sit amit.
-      <ul>
-        <li>
-          description of Service
-          <li>Feature service trips, photos</li>
-        </li>
-        <li>Feature Ananya</li>
-      </ul>
+      Many of our service projects impact our local community in West
+      Lafayette and Lafayette, IN. Current opportunities include educating
+      the children at the Boys & Girls Club in conjunction with IU Health's
+      Get Onboard Active Living program, collecting donations outside of
+      Wal-Mart for our Ecuador Medical Brigade, helping out at Food Finders
+      Food Bank, volunteering in the soup kitchen at the Lafayette Urban
+      Ministry or for their other events throughout the year, participating
+      in our pilot program- the Food Recovery Network, which allows us to
+      donate unused food from Purdue's dining courts to facilities around
+      the community, and even more! These events give students an intimate
+      view of the importance public health in their own community and raise
+      awareness on our organization's goals and achievements. Contact Will
+      Austin, the Director of Community Service for more information.
+    </p>
+    <h3>Atlanta, Georgia</h3>
+    <p>
+      Unique to the Purdue chapter of Timmy Global Health, our Domestic
+      Service trip sends 16 students to Atlanta, GA over spring break.
+      Working in conjunction with DOOR Atlanta, a local non-profit
+      organization, we serve in soup kitchens, food pantries, after
+      school programs, and learn about those struggling with homelessness.
+      Starting in Spring of 2016, this trip has also had the opportunity
+      to visit the Centers for Disease Control & Prevention and discuss
+      issues about public health with experts at the CDC. More information
+      will be released at general meetings and applications will open
+      early October. Contact Erin Dubin or Sukhi Kaur, the trip leaders
+      for the 2018-2019 school year.
+    </p>
+    <h3>Quito Equidor</h3>
+    <p>
+      On our flagship Spring Break trip, 16 students travel with medical
+      professionals to underserved communities in Quito, Ecuador. This
+      medical brigade is organized with Timmy Global Health Headquarters,
+      as we return to the same communities each year. Combined with
+      medical brigades from other college and high school chapters, this
+      results in a continuity of care for high-risk, chronic patients, as
+      a Timmy clinic is set up in those same communities every couple of
+      months by each chapter. Leading up to the trip, trip leaders give
+      lessons on Spanish, Ecuadorian culture, and host mock-clinics to
+      prepare each trip goer for this amazing experience. As with the
+      service trip to Atlanta, GA, more information will be released at
+      general meetings and applications will open in October. Contact
+      this year's trip leaders, Mikaela Skaare or Ashley Birkhimer for
+      more information. 
     </p>
   </section>
 </div>
