--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,5 +7,28 @@
     </div>
   </div>
 </header>
-
-home
+<div class="page__content">
+  <h2>Our Mission</h2>
+  <p>
+    As one of the earliest college chapters of Timmy Global Health, we
+    have been promoting Timmy's mission of expanding access to healthcare
+    and empowering students on Purdue's campus to tackle global health
+    challenges since 2004. Serving in the greater Lafayette area, Atlanta,
+    Georgia, and Quito, Ecuador, Purdue Timmy Global Health has advocated
+    for global health disparities, served in underprivileged communities,
+    and provided medical care to those without access to quality care.
+  </p>
+  <h2>Our Goals</h2>
+  <p>
+    As an organization, we strive to grow our impact on and off campus.
+    Through our many advocacy events, such as Mental Health Awareness
+    Week and Global Health Week, we educate the students on public health
+    locally and abroad. By joining committees, students can become more
+    involved in the planning of many of our events.
+    <br/><br/>
+    We also look to grow our service opportunities in the Greater Lafayette
+    area and continue the Domestic Service Trip and the Ecuador Medical
+    Brigade as a way to experience the impact of public and global health
+    firsthand.
+  </p>
+</div>
