--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
   </head>
   <body>
     <nav>
-      <a href="/"><div class="nav__logo">Timmy Global Health | Purdue</div></a>
+      <a href="/"><div class="nav__logo"><img src="../img/TGH_Header_Logo.png" width="100%" height="auto"/></div></a>
       <div class="nav__items">
         <a href="/about"><div class="nav__item">About Us</div></a>
         <a href="/team"><div class="nav__item">Meet The Team</div></a>
