Adds dropdown and dd pages

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,10 +1,10 @@
 <header class="page__header">
 </header>
 <div class="page__title">
-  <h1>About us</h1>
+  <h1>Welcome to the Purdue University Timmy Global Health home page!</h1>
 </div>
 <div class="page__content">
-  <section>
+  <!-- <section>
     <h2>Fundraising</h2>
     <p>
       Lorem ipsum dolor sit amit.
@@ -23,27 +23,15 @@
         <li>Feature Clare</li>
       </ul>
     </p>
-  </section>
+  </section> -->
   <section>
-    <h2>Service</h2>
+    <!-- <h2>Service</h2>
     <hr/>
-    <h3>Around Purdue</h3>
+    <h3>Around Purdue</h3> -->
     <p>
-      Many of our service projects impact our local community in West
-      Lafayette and Lafayette, IN. Current opportunities include educating
-      the children at the Boys & Girls Club in conjunction with IU Health's
-      Get Onboard Active Living program, collecting donations outside of
-      Wal-Mart for our Ecuador Medical Brigade, helping out at Food Finders
-      Food Bank, volunteering in the soup kitchen at the Lafayette Urban
-      Ministry or for their other events throughout the year, participating
-      in our pilot program- the Food Recovery Network, which allows us to
-      donate unused food from Purdue's dining courts to facilities around
-      the community, and even more! These events give students an intimate
-      view of the importance public health in their own community and raise
-      awareness on our organization's goals and achievements. Contact Will
-      Austin, the Director of Community Service for more information.
+      “Purdue University Timmy Global Health, or “Purdue Timmy” as we are commonly known on the Purdue campus, is one of the earliest college chapters of the larger nonprofit organization, Timmy Global Health, founded by Purdue alumnus Dr. Chuck Dietzen. As a chapter at Purdue, we have been promoting Timmy's mission of expanding access to healthcare and empowering students on Purdue's campus to tackle global health challenges since 2004. Serving in the greater Lafayette area, Atlanta, Georgia, and Quito, Ecuador, Purdue Timmy Global Health honors the Timmy Global Health pillars of fundraising, advocacy, and service through raising awareness about global health disparities, serving in a multitude of forms and locations, and providing primary care to those in need while building a motivated group of individuals, colleagues, and friends on our West Lafayette campus.”
     </p>
-    <h3>Atlanta, Georgia</h3>
+    <!-- <h3>Atlanta, Georgia</h3>
     <p>
       Unique to the Purdue chapter of Timmy Global Health, our Domestic
       Service trip sends 16 students to Atlanta, GA over spring break.
@@ -72,7 +60,7 @@
       service trip to Atlanta, GA, more information will be released at
       general meetings and applications will open in October. Contact
       this year's trip leaders, Mikaela Skaare or Ashley Birkhimer for
-      more information. 
-    </p>
+      more information.
+    </p> -->
   </section>
 </div>
