--- a/views/css/global.css
+++ b/views/css/global.css
@@ -148,20 +148,38 @@ nav {
 }
 
 /* TEAM */
+.team__people {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+}
 .team__person {
   display: flex;
-  margin: 32px 0;
+  margin: 16px;
+  position: relative;
+}
+.team__person_picture-block {
   width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
 }
 .team__person_about {
-  margin: 0 16px;
+  padding: 16px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: none;
 }
 .team__person_name {
   font-size: 16px;
   font-weight: bold;
 }
 .team__person_description {
-
 }
 
 /* JOIN */
