--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -12,7 +12,7 @@
   </section>
   <section class="join__contact">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/email@domain.tld" method="POST">
+    <form action="https://formspree.io/timmy@purdue.edu" method="POST">
       <div class="join__contact_label">Your Name</div>
       <input type="text" name="name" placeholder="John Appleseed">
       <div class="join__contact_label">Your Email</div>
