--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,6 @@
         dropdown.style.display = "none";
       }
     </script>
-
     <title>{{title}}</title>
   </head>
   <body>
@@ -48,6 +47,6 @@
       </div>
     </nav>
     {{{body}}}
+    <script src="../script/gallery.js"></script>
   </body>
-
 </html>
