--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
   </head>
   <body>
     <nav>
-      <a href="/"><div class="nav__logo"><img src="../img/TGH_Header_Logo.png" width="100%" height="auto"/></div></a>
+      <a href="/"><div class="nav__logo"><img src="../img/timmy_purdue.png" width="100%" height="auto" style="margin-top: 16px"/></div></a>
       <div class="nav__items">
         <a href="/about"><div class="nav__item">About Us</div></a>
         <a href="/what_we_do/fundraising">
