Updates about page, links to sub committees, adds favicon

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,7 +1,7 @@
 <header class="page__header">
 </header>
 <div class="page__title">
-  <h1>Welcome to the Purdue University Timmy Global Health home page!</h1>
+  <h1>Welcome to Purdue University Timmy Global Health</h1>
 </div>
 <div class="page__content">
   <!-- <section>
