--- a/views/css/global.css
+++ b/views/css/global.css
@@ -71,24 +71,61 @@ nav {
 .nav__item_dropdown li:hover {
   text-decoration: underline;
 }
+/* MOBILE */
+.mobile_nav {
+  /* position: relative; */
+}
+.mobile_nav__hamburger {
+  font-size: 50px;
+  cursor: pointer;
+}
+.mobile_nav__menu ul {
+  list-style: none;
+}
+.mobile_nav__menu ul li {
+  margin-bottom: 8px;
+}
+#mobile_nav__wrapper {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+.mobile_nav__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0,0,0,0.5);
+  z-index: 5;
+}
+.mobile_nav__menu {
+  width: 200px;
+  height: 100vh;
+  background: black;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 6;
+}
 @media(max-width: 890px) {
-  nav {
-    display: block;
-    text-align: center;
-    margin-top: 16px;
-  }
   .nav__items {
-    margin-top: 16px;
-    display: block;
+    display: none;
   }
-  .nav__items a {
-    display: inline-block;
+  .mobile_nav {
+    display: flex;
   }
 }
 
-@media(max-width: 530px) {
-  .nav__items a {
-    margin-bottom: 8px;
+@media(min-width: 890px) {
+  .nav__items {
+    display: flex;
+  }
+  .mobile_nav {
+    display: none;
   }
 }
 
@@ -111,7 +148,6 @@ nav {
   position: absolute;
   top: 0;
   left: 0;
-  /* z-index: 1; */
 }
 .home__header_content_wrapper {
   margin: auto;
@@ -119,7 +155,7 @@ nav {
 .home__header_content {
   color: #FFFFFF;
   position: relative;
-  z-index: 2;
+  z-index: 1;
   text-align: center;
 }
 .home__header_cta {
