Finally have data read in

--- a/views/timmytimes.handlebars
+++ b/views/timmytimes.handlebars
@@ -4,6 +4,11 @@
   <h1>Timmy Times</h1>
 </div>
 <div class="page__content">
+  <p>
+    TimmyTimes is Purdue Timmy’s monthly newsletter filled with everything from professional perspectives, recipes, workouts, current events in more! Check out our most recent edition below:
+  </p>
+  <embed src="/assets/timmytimes/{{timmytimes.[1]}}" width="100%" height="700px" type="application/pdf">
+  <h1>Archive</h1>
   <ul>
     {{#each timmytimes}}
       <li><a href="/assets/timmytimes/{{this}}">{{this}}</a></li>
