--- a/views/what_we_do/service.handlebars
+++ b/views/what_we_do/service.handlebars
@@ -5,15 +5,6 @@
 </div>
 <div class="page__content">
   <section>
-    <p>
-      The Service branch of Purdue University Timmy Global Health gets hands-on in the local community as well as on the national and international level. This branch works to organize and maintain service events and programs throughout the year and supports the trip leaders for our various spring and fall break service trips.
-Feature service trips, photos, descriptions
-Chicago, IL
-Atlanta, GA
-NEW: St. Louis, MO
-Quito, Ecuador
-Feature Ananya and ExComm members
-
-    </p>
+    <p>{{ main }}</p>
   </section>
 </div>
