--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,63 +4,7 @@
   <h1>Welcome to Purdue University Timmy Global Health</h1>
 </div>
 <div class="page__content">
-  <!-- <section>
-    <h2>Fundraising</h2>
-    <p>
-      Lorem ipsum dolor sit amit.
-      <ul>
-        <li>description of fundraising</li>
-        <li>Feature Ashley</li>
-      </ul>
-    </p>
-  </section>
   <section>
-    <h2>Advocacy</h2>
-    <p>
-      Lorem ipsum dolor sit amit.
-      <ul>
-        <li>description of Advocacy</li>
-        <li>Feature Clare</li>
-      </ul>
-    </p>
-  </section> -->
-  <section>
-    <!-- <h2>Service</h2>
-    <hr/>
-    <h3>Around Purdue</h3> -->
-    <p>
-      “Purdue University Timmy Global Health, or “Purdue Timmy” as we are commonly known on the Purdue campus, is one of the earliest college chapters of the larger nonprofit organization, Timmy Global Health, founded by Purdue alumnus Dr. Chuck Dietzen. As a chapter at Purdue, we have been promoting Timmy's mission of expanding access to healthcare and empowering students on Purdue's campus to tackle global health challenges since 2004. Serving in the greater Lafayette area, Atlanta, Georgia, and Quito, Ecuador, Purdue Timmy Global Health honors the Timmy Global Health pillars of fundraising, advocacy, and service through raising awareness about global health disparities, serving in a multitude of forms and locations, and providing primary care to those in need while building a motivated group of individuals, colleagues, and friends on our West Lafayette campus.”
-    </p>
-    <!-- <h3>Atlanta, Georgia</h3>
-    <p>
-      Unique to the Purdue chapter of Timmy Global Health, our Domestic
-      Service trip sends 16 students to Atlanta, GA over spring break.
-      Working in conjunction with DOOR Atlanta, a local non-profit
-      organization, we serve in soup kitchens, food pantries, after
-      school programs, and learn about those struggling with homelessness.
-      Starting in Spring of 2016, this trip has also had the opportunity
-      to visit the Centers for Disease Control & Prevention and discuss
-      issues about public health with experts at the CDC. More information
-      will be released at general meetings and applications will open
-      early October. Contact Erin Dubin or Sukhi Kaur, the trip leaders
-      for the 2018-2019 school year.
-    </p>
-    <h3>Quito Equidor</h3>
-    <p>
-      On our flagship Spring Break trip, 16 students travel with medical
-      professionals to underserved communities in Quito, Ecuador. This
-      medical brigade is organized with Timmy Global Health Headquarters,
-      as we return to the same communities each year. Combined with
-      medical brigades from other college and high school chapters, this
-      results in a continuity of care for high-risk, chronic patients, as
-      a Timmy clinic is set up in those same communities every couple of
-      months by each chapter. Leading up to the trip, trip leaders give
-      lessons on Spanish, Ecuadorian culture, and host mock-clinics to
-      prepare each trip goer for this amazing experience. As with the
-      service trip to Atlanta, GA, more information will be released at
-      general meetings and applications will open in October. Contact
-      this year's trip leaders, Mikaela Skaare or Ashley Birkhimer for
-      more information.
-    </p> -->
+    <p>{{ main }}</p>
   </section>
 </div>
