--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,36 +1,17 @@
 <header class="home__header" id="gallery">
   <div class="home__header_content_wrapper">
     <div class="home__header_content">
-      <h1>A Global Mission</h1>
-      <h2>Delivering the promise of healthy futures.</h2>
+      <h1>{{ tagline_1 }}</h1>
+      <h2>{{ tagline_2 }}</h2>
       <a href="/join"><div class="home__header_cta">Join Us</div></a>
     </div>
   </div>
 </header>
 <div class="page__content">
   <h2>Our Mission</h2>
-  <p>
-    As one of the earliest college chapters of Timmy Global Health, we
-    have been promoting Timmy's mission of expanding access to healthcare
-    and empowering students on Purdue's campus to tackle global health
-    challenges since 2004. Serving in the greater Lafayette area, Atlanta,
-    Georgia, and Quito, Ecuador, Purdue Timmy Global Health has advocated
-    for global health disparities, served in underprivileged communities,
-    and provided medical care to those without access to quality care.
-  </p>
+  <p>{{ mission }}</p>
   <h2>Our Goals</h2>
-  <p>
-    As an organization, we strive to grow our impact on and off campus.
-    Through our many advocacy events, such as Mental Health Awareness
-    Week and Global Health Week, we educate the students on public health
-    locally and abroad. By joining committees, students can become more
-    involved in the planning of many of our events.
-    <br/><br/>
-    We also look to grow our service opportunities in the Greater Lafayette
-    area and continue the Domestic Service Trip and the Ecuador Medical
-    Brigade as a way to experience the impact of public and global health
-    firsthand.
-  </p>
+  <p>{{ goals }}</p>
 </div>
 
 <script>
@@ -38,12 +19,12 @@
   const images = JSON.parse(decodeURIComponent("{{{images}}}"));
   const gal = document.getElementById('gallery');
   const len = 1000; // Length image stays
-  const url = buildUrl(images[0]);
+  const url = buildUrl(images[3]);
   // set image when page loads
   gal.style.backgroundImage="url('" + url + "')";
 
   // then loop
-  loopGal(gal, images, 1);
+  // loopGal(gal, images, 1);
 })()
 
 function loopGal(gal, images, i) {
