--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -35,7 +35,7 @@
   </section>
 
   <section id="0">
-    <h1>Section 0</h1>
+    <h1>Finance Branch</h1>
   </section>
   <section id="1">
     <h1>Section 1</h1>
