--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -7,8 +7,7 @@
   <section>
     <h2>Our Events</h2>
     <div class="join__calendar">
-      https://calendar.google.com/calendar/r/month/2019/9/1
-      <iframe src="https://calendar.google.com/calendar/embed?src=m2fr4r36o1ksr6prmr0kpejco0%40group.calendar.google.com&ctz=America%2FIndiana%2FIndianapolis" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+      <iframe src="https://calendar.google.com/calendar/b/3/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=ZGQ4N2tibzY1cWc1bjlzOGR1aGk0czJnc29AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23C0CA33&amp;color=%230B8043" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
   </section>
   <section class="join__contact">
