--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,6 +7,9 @@
     </div>
   </div>
 </header>
+{{#if announcement}}
+  <div class="home__announcement">{{announcement}}</div>
+{{/if}}
 <div class="page__content">
   <h2>Our Mission</h2>
   <p>{{ mission }}</p>
